[workspace]
resolver = "2"
members = ["./crates/*"]

package.edition = "2021"
package.repository = "https://github.com/panghu-huang/astro-run"
package.homepage = "https://github.com/panghu-huang/astro-run"
package.description = "AstroRun is a highly customizable workflow orchestrator that allows users to define their own core runners. Whether it's Docker or other platforms, AstroRun empowers users to run workflows with ease and flexibility."
package.keywords = ["workflow", "runner", "automation", "docker", "CI"]
package.authors = ["wokeyifrontend@gmail"]
package.license = "MIT"

[workspace.dependencies]
# Dependencies
anyhow = "1.0.69"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0" }
dotenv = "0.15.0"
parking_lot = "0.12.1"
thiserror = "1.0.44"
tokio-stream = "0.1.14"
chrono = { version = "0.4.23" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
humantime = "2.1.0"
serde_yaml = "0.9.17"
glob = "0.3.1"
octocrate = { version = "2.0.0", features = ["apps", "pulls", "repos"] } 
async-trait = "0.1.73"
colored = "2.0.4"
prost = "0.11.9"
tonic = "0.9.2"
prost-types = "0.11.9"
tonic-build = "0.9.2"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = "1.0.107"
proto = "0.1.2"
bytes = "1.6.0"
serde_json = "1.0.117"

# Workspace dependencies
astro-run = { path = "./crates/astro-run", version = "1.0.0" }
astro-run-test = { path = "./crates/test" }
astro-run-logger = { path = "./crates/logger", version = "0.1.3" }
astro-run-scheduler = { path = "./crates/scheduler", version = "0.1.3" }
astro-run-remote-runner = { path = "./crates/remote-runner", version = "1.0.0" }
astro-run-runner = { path = "./crates/runner", version = "1.0.0" }
astro-run-protocol = { path = "./crates/protocol", version = "1.0.0" }
