[package]
name = "astro-run-protocol"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
prost-types = "0.11.9"
astro-run = { path = "../astro-run" }

chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.9.2"
