[package]
name = "astro-run-remote-runner"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro-run = { path = "../astro-run" }
astro-run-protocol = { path = "../astro-run-protocol" }

tokio-stream = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
