[package]
name = "astro-run-scheduler"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro-run = { path = "../astro-run", version = "0.1.0" }
parking_lot = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
astro-run-test = { path = "../astro-run-test" }
astro-run-logger = { path = "../astro-run-logger" }
