[package]
name = "astro-run-server"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro-run = { path = "../astro-run", version = "0.1.0-dev.3" }
astro-run-protocol = { path = "../astro-run-protocol", version = "0.1.0", features = [
  "astro-run-server",
] }

tokio-stream = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }


[dev-dependencies]
astro-run-test = { path = "../astro-run-test" }
astro-run-logger = { path = "../astro-run-logger" }
