[package]
name = "astro-run"
version = "0.1.6"
description = "A highly customizable workflow orchestrator"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"
name = "astro_run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
serde_yaml = "0.9.17"

# Workspace dependencies
parking_lot = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
serde = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-stream = { workspace = true }
glob = "0.3.1"
octocrate = "0.1.5"
async-trait = "0.1.73"

[dev-dependencies]
astro-run-test = { path = "../test" }
astro-run-logger = { path = "../logger" }

dotenv = { workspace = true }
