[package]
name = "astro-run"
version = "0.1.7"
description = "A highly customizable workflow orchestrator"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"
name = "astro_run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = { workspace = true }
serde_yaml = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
serde = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-stream = { workspace = true }
glob = { workspace = true }
octocrate = { workspace = true }
async-trait = { workspace = true }
erased-serde = "0.4.5"
typetag = "0.2.8"
serde_json = "1.0.117"

[dev-dependencies]
dotenv = { workspace = true }

astro-run-test = { workspace = true }
astro-run-logger = { workspace = true }
