[package]
name = "astro-run-protocol"
version = "0.1.6"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

[features]
astro-run-server = []
astro-run-remote-runner = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
prost-types = "0.11.9"
astro-run = { path = "../astro-run", version = "0.1.7" }
chrono = { workspace = true }

astro-run-scheduler = { path = "../scheduler", version = "0.1.2" }

[build-dependencies]
tonic-build = "0.9.2"
