[package]
name = "astro-run-protocol"
version = "0.1.6"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

[features]
astro-run-server = []
astro-run-remote-runner = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
astro-run = { workspace = true }
chrono = { workspace = true }
astro-run-scheduler = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
