[package]
name = "astro-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = { workspace = true }
astro-run = { path = "../astro-run" }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
parking_lot = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
