[package]
name = "astro-runner"
version = "0.1.4"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = { workspace = true }
astro-run = { path = "../astro-run", version = "0.1.4" }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
parking_lot = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
async-trait = "0.1.73"

[dev-dependencies]
astro-run-test = { path = "../test" }
astro-run-logger = { path = "../logger" }
