[package]
name = "astro-runner"
version = "0.1.6"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = { workspace = true }
astro-run = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "time",
] }
parking_lot = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
astro-run-test = { workspace = true }
astro-run-logger = { workspace = true }
