[package]
name = "astro-run-test"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits", "full"] }

[dev-dependencies]
log = { workspace = true }
astro-run-logger = { path = "../logger" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
