[package]
name = "astro-run-test"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }

[dev-dependencies]
log = { workspace = true }
astro-run-logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
